--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -29,6 +29,7 @@
 					<a [routerLink]="['/show-profile',personaje.id_venture]" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name}}</mat-card-title>
+					<mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
 					</mat-card-header></a>
 					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
 					<mat-card-content>
@@ -53,6 +54,7 @@
 					<a [routerLink]="['/show-profile',personaje.id]" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name_user}}</mat-card-title>
+					<mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
 					</mat-card-header></a>
 					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
 					<mat-card-content>
