--- a/src/app/show-profile/show-profile.component.html
+++ b/src/app/show-profile/show-profile.component.html
@@ -84,7 +84,7 @@
             <div class="section-title">
               <h2>Collaboration</h2>
               <div class="line-dec"></div>
-              <span><p>Select your entrepreneur favorite</p> </span>
+              <span><p class="p-two">Select your entrepreneur favorite</p> </span>
             </div>
             <div class="row">
               <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
@@ -111,17 +111,14 @@
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                          <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                          <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -132,17 +129,14 @@
                             <mat-card-header>
                             <div mat-card-avatar class="example-header-image"></div>
                             <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                            <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                            <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                             </mat-card-header>
                             <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
-                            <br>
                             <mat-card-content>
-                            <p>
+                            <p class="p-card">
                               Descripción del emprendimiento
                             </p>
                             </mat-card-content>
-                            <mat-card-actions>
-                            </mat-card-actions>
                           </mat-card>
                         </div>
                     </div>
@@ -153,17 +147,14 @@
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                          <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                          <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -175,18 +166,14 @@
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                          <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                          <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
-                          <br>
                           <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -197,17 +184,14 @@
                           <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                          <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                          <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -218,17 +202,14 @@
                         <mat-card-header>
                           <div mat-card-avatar class="example-header-image"></div>
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
-                          <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                          <mat-card-subtitle style="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -499,7 +480,7 @@
             <div class="section-title">
               <h2>Collaboration</h2>
               <div class="line-dec"></div>
-              <span><p>Select your entrepreneur favorite</p> </span>
+              <span><p class="p-two">Select your entrepreneur favorite</p> </span>
             </div>
             <div class="row">
               <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
@@ -529,14 +510,11 @@
                           <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -550,14 +528,11 @@
                             <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                             </mat-card-header>
                             <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
-                            <br>
                             <mat-card-content>
-                            <p>
+                            <p class="p-card">
                               Descripción del emprendimiento
                             </p>
                             </mat-card-content>
-                            <mat-card-actions>
-                            </mat-card-actions>
                           </mat-card>
                         </div>
                     </div>
@@ -571,14 +546,11 @@
                           <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -592,16 +564,12 @@
                           <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
                           <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
-                          <br>
                           <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -615,14 +583,11 @@
                           <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
@@ -636,14 +601,11 @@
                           <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
                           </mat-card-header>
                           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                          <br>
                           <mat-card-content>
-                          <p>
+                          <p class="p-card">
                             Descripción del emprendimiento
                           </p>
                           </mat-card-content>
-                          <mat-card-actions>
-                          </mat-card-actions>
                         </mat-card>
                       </div>
                     </div>
