--- a/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
+++ b/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
@@ -3,7 +3,7 @@
       <div class="section-title">
         <h2>Colaborations</h2>
         <div class="line-dec"></div>
-        <span><p>look your favorite colaboration </p></span>
+        <span><p class="p-one">look your favorite colaboration </p></span>
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
@@ -32,14 +32,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       description
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -53,15 +50,11 @@
                       <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                       </mat-card-header>
                       <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
-                      <br>
                       <mat-card-content>
                       <p>
                         description
-
                       </p>
                       </mat-card-content>
-                      <mat-card-actions>
-                      </mat-card-actions>
                     </mat-card>
                   </div>
               </div>
@@ -75,14 +68,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       description
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -96,16 +86,12 @@
                     <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                     </mat-card-header>
-                    <br>
                     <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       description
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -119,14 +105,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       description
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
@@ -140,14 +123,11 @@
                     <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
                     </mat-card-header>
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <br>
                     <mat-card-content>
                     <p>
                       description
                     </p>
                     </mat-card-content>
-                    <mat-card-actions>
-                    </mat-card-actions>
                   </mat-card>
                 </div>
               </div>
