--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -63,6 +63,11 @@
                                         </label>
                                     </div>
 
+                                    <div>
+                                        <h6>User photo</h6>
+                                        <input type="url"  class="form-control" placeholder="Url user photo ">
+                                    </div>
+
                                     <button type="submit" class="btnRegister">
                                         Register
                                     </button>
