--- a/src/app/show-profile/show-profile.component.html
+++ b/src/app/show-profile/show-profile.component.html
@@ -408,7 +408,7 @@
         <section id="hero2" class="d-flex flex-column justify-content-center align-items-center">
             <div class="hero-container hero-entrepeneur" data-aos="fade-in">
             <h1>{{name}}</h1>
-            <p>I'm <span>ENTREPENEUR</span></p>
+            <p class="p-two">I'm <span>ENTREPENEUR</span></p>
             </div>
         </section><!-- End Hero -->
         <section id="about" class="about">
