--- a/src/app/components/influencer-profile/influencer-profile.component.css
+++ b/src/app/components/influencer-profile/influencer-profile.component.css
@@ -12,7 +12,7 @@ p{
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("https://static.nationalgeographic.es/files/styles/image_3200/public/01-lion-populations-nationalgeographic_1777804.jpg?w=1900&h=1267") top center;
+    background-position: top center;
     background-size: cover;
   }
   /*--------------------------------------------------------------
